Aanpassingen aan index/footer

--- a/index.html
+++ b/index.html
@@ -43,54 +43,10 @@
 
 		<section class="wrapped">
 			<div>
-				<h2>Trench Coats</h2>
-				<a href="#">Woman</a>
-			</div>
-			<img src="images/Afbeelding-2.webp" alt="Shot of model wearing Short Gabardine Fitzrovia Trench Coat Colour Red Wine with Burberry Check Scarf">
-		</section>
-
-		<section class="wrapped">
-			<div>
-				<h2>Trench Coats</h2>
-				<a href="#">Men</a>
-				<img src="/images/Afbeelding-3.webp" alt="Shot of model wearing Long Burberry Trench Coat, leaning against a stone statue of a dog">
-			</div>
-		</section>
-
-		<section class="wrapped">
-			<div>
 				<h2>Bags</h2>
 				<a href="#">Woman</a>
 				<a href="#">Men</a>
 				<img src="/images/Afbeelding-4.webp" alt="Shot of Small B Clip Messenger Bag in our colour Mushroom">
-			</div>
-		</section>
-
-
-
-		<section class="wrapped">
-			<div>
-				<h2>Scarves</h2>
-				<a href="#">Woman</a>
-				<img src="/images/Afbeelding-5.webp" alt="Shot of model wearing Burberry Knit Jumper and Curve Pilot Sunglasses in colour Black">
-			</div>
-		</section>
-
-		<section class="wrapped">
-			<div>
-				<h2>Scarves</h2>
-				<a href="#">Woman</a>
-				<img src="/images/Afbeelding-6.webp" alt="Shot of model wearing Burberry Check Wool">
-			</div>
-		</section>
-
-
-
-		<section class="wrapped">
-			<div>
-				<h2>New In</h2>
-				<a href="#">Woman</a>
-				<img src="/images/Afbeelding-7.webp" alt="Shot of model wearing Short Gabardine Fitzrovia Trench Coat Wine, holding Medium Highlands Tote in colour Mahogany red">
 			</div>
 		</section>
 
@@ -102,17 +58,48 @@
 			</div>
 		</section>
 
-
-
 		<section>
 			
 		</section>
 	</Main>
 
 	<footer>
-		<ul>
-			<li></li>
-		</ul>
+		<h2>Sign Up</h2>
+		<input type="text" name="Email">
+		<p>Find a store</p>
+
+		<details>
+			<summary>Burberry services</summary>
+			<li>Book an Appointment</li>
+			<li>Trench bespoke</li>
+			<li>ReBurberry Services</li>
+		</details>
+		
+		<details>
+			<summary>Customer Support</summary>
+			<li>Contact Us</li>
+			<li>Returns</li>
+		</details>
+
+		<details>
+			<summary>About Burberry</summary>
+			<li>Burberry Heritage</li>
+			<li>Stories</li>
+		</details>
+
+		<details>
+			<summary>Legal & Cookies</summary>
+			<li>Terms & Conditions</li>
+			<li>Privacy Policy</li>
+		</details>
+
+		<a href="#">Language English</a>
+		<a href="#">Shipping to United States</a>
+
+		<a href="#">Modern Slavery Statement</a>
+		<p>If you are using a screen-reader and are having problems using this website, please call <a href="#">+1 877 217 4085</a> or <a href="#">contact us</a> for assistance</p>
+
+
 	</footer>
 	
 
