--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 	<title>Burberry</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="styles/algemeen.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<Header>
-		<h1>Burberry</h1>
+	<header>
+		<h1>
+			<a href="index.html">Burberry</a>
+		</h1>
+		<!-- <img src="/images/Search-img.png" alt="Zoeken">
+		<img src="/images/Winkelwagen-img.png" alt="Winkelwagen">
+		<img src="/images/Hamburgermenu-img.png" alt="Menu"> -->
 		<nav>
 			<ul>
-				<h2>Home</h2>
+				<p>Home</p>
 				<li>Woman</li>
 				<li>Men</li>	
 				<li>Children</li>
@@ -27,45 +33,114 @@
 				<li>Beauty & Fragrances</li>
 				<li>Stories</li>
 			</ul>
-		</nav>
-	</Header>
+		</nav>  
+	</header>
 
-	<Main>
-		<section class="winter">
+
+
+	<main>
+		<section>
+			<img src="/images/Afbeelding-1.png" alt="Shot of Rupert Evertt wearing Burberry Outerwear for the Winter 2025 Runway Collection">
 			<div>
 				<h2>Winter 2025</h2>
 				<a href="#">Woman</a>
 				<a href="#">Men</a>
-				<img src="/images/Afbeelding-1.webp" alt="Shot of Rupert Evertt wearing Burberry Outerwear for the Winter 2025 Runway Collection">
-			</div>
-			<img src="" alt="">
-		</section>
-
-		<section class="wrapped">
-			<div>
-				<h2>Bags</h2>
-				<a href="#">Woman</a>
-				<a href="#">Men</a>
-				<img src="/images/Afbeelding-4.webp" alt="Shot of Small B Clip Messenger Bag in our colour Mushroom">
-			</div>
-		</section>
-
-		<section class="wrapped">
-			<div>
-				<h2>New In</h2>
-				<a href="#">Men</a>
-				<img src="/images/Afbeelding-8.webp" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
 			</div>
 		</section>
 
 		<section>
-			
+			<section>
+				<ul>
+					<li>
+						<img src="/images/Carrousel-1.webp" alt="">
+					</li>
+
+					<li>
+						<img src="/images/Carrousel-2.webp" alt="">
+					</li>
+
+					<li>
+						<img src="/images/Carrousel-3.webp" alt="">
+					</li>
+
+					<li>
+						<img src="/images/Carrousel-4.webp" alt="">
+					</li>
+
+					<li>
+						<img src="/images/Carrousel-5.webp" alt="">
+					</li>
+
+					<li>
+						<img src="/images/Carrousel-6.webp" alt="">
+					</li>
+				</ul>
+				<h2>Heritage Bags</h2>
+				<p>House rules apply to our new-season bags. Discover signature shapes that referene our heritage, including the B Clip messengers - a softly style inspired by equestrian saddles.</p>
+			</section>
+
+			<section>
+				<img src="/images/Afbeelding-2.png" alt="Shot of Small B Clip Messenger Bag in our colour Mushroom">
+				<div>
+					<h2>Bags</h2>
+					<a href="#">Woman</a>
+					<a href="#">Men</a>
+				</div>
+			</section>
 		</section>
-	</Main>
+			
+
+		<section>
+			<img src="/images/Afbeelding-3.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
+			<div>
+				<h2>New In</h2>
+				<a href="#">Men</a>
+			</div>
+		</section>
+
+		<section>
+			<ul>
+				<li>
+					<img src="./images/Scroll-1.png" alt="">
+					<h2>Narrow Check Wool...</h2>
+					<p>$545.00</p>	
+				</li>
+
+				<li>
+					<img src="./images/Scroll-2.png" alt="">
+					<h2>Check Wool Hooded...</h2>
+					<p>$1,050.00</p>
+				</li>
+
+				<li>
+					<img src="./images/Scroll-3.png" alt="">
+					<h2>Check Cashmere Scarf</h2>
+					<p>$675.00</p>
+				</li>
+
+				<li>
+					<img src="./images/Scroll-4.png" alt="">
+					<h2>Contrast Check...</h2>
+					<p>$725.00</p>
+				</li>
+
+				<li>
+					<img src="./images/Scroll-5.png" alt="">
+					<h2>Check Cashemere Scarf</h2>
+					<p>$645.00</p>
+				</li>
+			</ul>
+
+		</section>
+	</main>
 
 	<footer>
 		<h2>Sign Up</h2>
-		<input type="text" name="Email">
+		<form action="#">
+			<input type="text" name="Email">
+			<button type="submit"></button>
+		</form>
+		
 		<p>Find a store</p>
 
 		<details>
