--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
 		<h1>
 			<a href="index.html">Burberry</a>
 		</h1>
-		<!-- <img src="/images/Search-img.png" alt="Zoeken">
-		<img src="/images/Winkelwagen-img.png" alt="Winkelwagen">
-		<img src="/images/Hamburgermenu-img.png" alt="Menu"> -->
+		<img src="./images/Search-img.png" alt="Zoeken">
+		<img src="./images/Winkelwagen-img.png" alt="Winkelwagen">
+		<button><img src="./images/Hamburger-icon.png" alt="Nav button"></button>
 		<nav>
+			<button aria-hidden="true"><img src="./images/Close-icon.png" alt="Close button"></button>
+
 			<ul>
 				<p>Home</p>
-				<li>Woman</li>
-				<li>Men</li>	
-				<li>Children</li>
-				<li>Gifts</li>
-				<li>Trench</li>
-				<li>Bags</li>
-				<li>Beauty & Fragrances</li>
-				<li>Stories</li>
+				<li><a href="#">Woman</a></li>
+				<li><a href="#">Man</a></li>	
+				<li><a href="#">Children</a></li>
+				<li><a href="#">Gifts</a></li>
+				<li><a href="#">Trench</a></li>
+				<li><a href="#">Bags</a></li>
+				<li><a href="#">Beauty and Fragrances</a></li>
+				<li><a href="#">Stories</a></li>
 			</ul>
 		</nav>  
 	</header>
 
 
-
 	<main>
-		<section>
+		<section> <!-- section 1 -->
 			<div>
 				<h2>Winter 2025</h2>
 				<a href="#">Woman</a>
@@ -48,7 +49,7 @@
 			<img src="/images/Afbeelding-1.png" alt="Shot of Rupert Evertt wearing Burberry Outerwear for the Winter 2025 Runway Collection">
 		</section>
 
-		<section>
+		<section> <!-- section 2 -->
 			<ul>
 				<li>
 					<img src="/images/Carrousel-1.webp" alt="">
@@ -76,27 +77,37 @@
 			</ul>
 			<h2>Heritage Bags</h2>
 			<p>House rules apply to our new-season bags. Discover signature shapes that referene our heritage, including the B Clip messengers - a softly style inspired by equestrian saddles.</p>
+			<a href="#">Women</a>
+			<a href="#">Men</a>
 		</section>
 
-			<section>
-				<img src="/images/Afbeelding-2.png" alt="Shot of Small B Clip Messenger Bag in our colour Mushroom">
-				<div>
-					<h2>Bags</h2>
-					<a href="#">Woman</a>
-					<a href="#">Men</a>
-				</div>
-			</section>
+		<section> <!-- section 3 -->
+			<div>
+				<h2>Bags</h2>
+				<a href="#">Woman</a>
+				<a href="#">Men</a>
+			</div>
+			<img src="/images/Afbeelding-2.png" alt="Shot of Small B Clip Messenger Bag in our colour Mushroom">
+		</section>
 			
 
-		<section>
-			<img src="/images/Afbeelding-3.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
+		<section> <!-- section 4 -->
 			<div>
 				<h2>New In</h2>
 				<a href="#">Men</a>
 			</div>
+			<img src="/images/Afbeelding-3.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
 		</section>
 
 		<section>
+			<div>
+				<h2>New In</h2>
+				<a href="#">Women</a>
+			</div>
+			<img src="/images/Afbeelding-4.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
+		</section>
+
+		<section> <!-- section 6 -->
 			<ul>
 				<li>
 					<img src="./images/Scroll-1.png" alt="">
@@ -128,8 +139,8 @@
 					<p>$645.00</p>
 				</li>
 			</ul>
-
 		</section>
+
 	</main>
 
 	<footer>
