--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
     <title>New in</title>
 
     <link href="styles/newstyle.css" rel="stylesheet">
+	<link rel="stylesheet" href="styles/algemeen.css">
 	<link rel="stylesheet" href="styles/fonts.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
@@ -16,26 +17,71 @@
 		<h1>
 			<a href="index.html">Burberry</a>
 		</h1>
-		<!-- <img src="/images/Search-img.png" alt="Zoeken">
-		<img src="/images/Winkelwagen-img.png" alt="Winkelwagen">
-		<img src="/images/Hamburgermenu-img.png" alt="Menu"> -->
+		<img src="./images/Search-img.png" alt="Zoeken">
+		<img src="./images/Winkelwagen-img.png" alt="Winkelwagen">
+		<button><img src="./images/Hamburger-icon.png" alt="Nav button"></button>
 		<nav>
+			<button aria-hidden="true"><img src="./images/Close-icon.png" alt="Close button"></button>
+
 			<ul>
 				<p>Home</p>
-				<li>Woman</li>
-				<li>Men</li>	
-				<li>Children</li>
-				<li>Gifts</li>
-				<li>Trench</li>
-				<li>Bags</li>
-				<li>Beauty & Fragrances</li>
-				<li>Stories</li>
+				<li><a href="#">Woman</a></li>
+				<li><a href="./new.html">Man</a></li>	
+				<li><a href="#">Children</a></li>
+				<li><a href="#">Gifts</a></li>
+				<li><a href="#">Trench</a></li>
+				<li><a href="#">Bags</a></li>
+				<li><a href="#">Beauty and Fragrances</a></li>
+				<li><a href="#">Stories</a></li>
 			</ul>
-		</nav>
+		</nav>  
 	</header>
 
 	<main>
-		
+		<h2>Men's New Arrivals</h2>
+		<section> <!-- section 1 -->
+			<img src="./images/pagina-2-afbeelding-1.webp" alt="Jas">
+			<p>New In</p>
+			<div>
+				<h3>Wool Pea Coat</h3>
+				<p>$2,650.00</p>
+			</div>
+		</section>
+
+		<section> <!-- section 2 -->
+			<img src="./images/pagina-2-afbeelding-2.webp" alt="Schoenen">
+			<p>New In</p>
+			<div>
+				<h3>Leather and Check Terrace Sneakers</h3>
+				<p>$750.00</p>
+			</div>
+		</section>
+
+		<section> <!-- section 3 -->
+			<img src="./images/pagina-2-afbeelding-1.webp" alt="Jas">
+			<p>New In</p>
+			<div>
+				<h3>Wool Pea Coat</h3>
+				<p>$2,650.00</p>
+			</div>
+		</section>
+
+		<section> <!-- section 4 -->
+			<img src="./images/pagina-2-afbeelding-2.webp" alt="Schoenen">
+			<p>New In</p>
+			<div>
+				<h3>Leather and Check Terrace Sneakers</h3>
+				<p>$750.00</p>
+			</div>
+		</section>
+
+		<section> <!-- section 5 -->
+			<div>
+				<a href="#">Shop Polo Shirt</a>
+			</div>
+			<img src="/images/Afbeelding-3.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
+		</section>
+
 	</main>
 
 	<footer>
