--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<ul>
 				<p>Home</p>
 				<li><a href="#">Woman</a></li>
-				<li><a href="#">Man</a></li>	
+				<li><a href="./new.html">Man</a></li>	
 				<li><a href="#">Children</a></li>
 				<li><a href="#">Gifts</a></li>
 				<li><a href="#">Trench</a></li>
