--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 			<ul>
 				<p>Home</p>
-				<li><a href="#">Woman</a></li>
-				<li><a href="./new.html">Man</a></li>	
+				<li><a href="#">Women</a></li>
+				<li><a href="./new.html">Men</a></li>	
 				<li><a href="#">Children</a></li>
 				<li><a href="#">Gifts</a></li>
 				<li><a href="#">Trench</a></li>
