--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
 
     <link href="styles/newstyle.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles/algemeen.css">
-	<link rel="stylesheet" href="styles/fonts.css">
+	<link rel="stylesheet" href="styles/newstyle.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
@@ -25,8 +25,8 @@
 
 			<ul>
 				<p>Home</p>
-				<li><a href="#">Woman</a></li>
-				<li><a href="./new.html">Man</a></li>	
+				<li><a href="#">Women</a></li>
+				<li><a href="./new.html">Men</a></li>	
 				<li><a href="#">Children</a></li>
 				<li><a href="#">Gifts</a></li>
 				<li><a href="#">Trench</a></li>
@@ -38,50 +38,425 @@
 	</header>
 
 	<main>
-		<h2>Men's New Arrivals</h2>
-		<section> <!-- section 1 -->
-			<img src="./images/pagina-2-afbeelding-1.webp" alt="Jas">
-			<p>New In</p>
-			<div>
-				<h3>Wool Pea Coat</h3>
-				<p>$2,650.00</p>
-			</div>
-		</section>
+		<h2>Men's New Arrival</h2>
+		<ul>
+			<li>
+				<a href="#">All</a>
+			</li>
+			<li>
+				<a href="#">Coats & Jackets</a>
+			</li>
+			<li>
+				<a href="#">Clothes</a>
+			</li>
+			<li>
+				<a href="#">Scarves</a>
+			</li>
+			<li>
+				<a href="#">Scarves</a>
+			</li>
+			<li>
+				<a href="#">Shoes</a>
+			</li>
+		</ul>
 
-		<section> <!-- section 2 -->
-			<img src="./images/pagina-2-afbeelding-2.webp" alt="Schoenen">
-			<p>New In</p>
-			<div>
-				<h3>Leather and Check Terrace Sneakers</h3>
-				<p>$750.00</p>
-			</div>
-		</section>
+			<ul>
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
 
-		<section> <!-- section 3 -->
-			<img src="./images/pagina-2-afbeelding-1.webp" alt="Jas">
-			<p>New In</p>
-			<div>
-				<h3>Wool Pea Coat</h3>
-				<p>$2,650.00</p>
-			</div>
-		</section>
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
 
-		<section> <!-- section 4 -->
-			<img src="./images/pagina-2-afbeelding-2.webp" alt="Schoenen">
-			<p>New In</p>
-			<div>
-				<h3>Leather and Check Terrace Sneakers</h3>
-				<p>$750.00</p>
-			</div>
-		</section>
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
 
-		<section> <!-- section 5 -->
-			<div>
-				<a href="#">Shop Polo Shirt</a>
-			</div>
-			<img src="/images/Afbeelding-3.png" alt="Shot of model wearing Burberry Check Knitwear and Cotton Chinos in colour Clove Brown">
-		</section>
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
 
+				<li>
+					<a href="#">
+						<h3>Celebrate the season</h3>
+						<p>Shop gifts for Him</p>
+						<img src="./images/pagina-2-afbeelding-3.png" alt="">
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Celebrate the season</h3>
+						<p>Shop gifts for Him</p>
+						<img src="./images/pagina-2-afbeelding-3.png" alt="">
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/afbeelding-carousel1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/afbeelding-carousel3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Corduroy Snowdown Puffer Jacket</h3>
+						<p>New In</p>
+						<p>$2,495.00</p>
+						<ul>
+							<li>
+								<img src="./images/Carrousel-1.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-2.webp" alt="">
+							</li>
+							<li>
+								<img src="./images/Carrousel-3.webp" alt="">
+							</li>
+						</ul>
+					</a>
+				</li>
+			</ul>
 	</main>
 
 	<footer>
